--- a/www/radio.html
+++ b/www/radio.html
@@ -46,8 +46,8 @@
 
 		}
 
-
-		function onDeviceReady() {
+		window.alert("public");
+		function onDeviceReady() {window.alert("onDeviceReady");
 			console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start onDeviceReady()');
 
 			
@@ -62,6 +62,7 @@
 				goto_home();
 			}
 			setTimeout(function(){
+				window.alert("hi");
 				file = "sound.mp3";
 				file = "http://37.236.145.99/radio.mp3";
 				file = "http://109.205.117.206/radio.mp3";
