--- a/www/radio.html
+++ b/www/radio.html
@@ -66,6 +66,7 @@
 				file = "sound.mp3";
 				file = "http://37.236.145.99/radio.mp3";
 				file = "http://109.205.117.206/radio.mp3";
+				file = "audio/besmella.mp3";
 				/*
 				if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
 					file = "/android_asset/www/" + file;
