--- a/www/radio.html
+++ b/www/radio.html
@@ -66,13 +66,12 @@
 				file = "sound.mp3";
 				file = "http://37.236.145.99/radio.mp3";
 				file = "http://109.205.117.206/radio.mp3";
-				file = "audio/besmella.mp3";
 				/*
 				if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
 					file = "/android_asset/www/" + file;
 				}
 				*/
-				audio = new Media(file, function(){ // success callback
+				audio = new Media("audio/besmella.mp3", function(){ // success callback
 					console.log("playing");
 					window.alert("play");
 				}, function(error){ // error callback
