--- a/www/index.html
+++ b/www/index.html
@@ -96,6 +96,31 @@
 		}
 
 		function onDeviceReady() {
+			
+			
+			
+			
+			
+			
+			
+			// Play the audio file at url
+			var my_media = new Media("/android_asset/www/audio/besmella.mp3",
+				// success callback
+				function () { console.log("playAudio():Audio Success"); },
+				// error callback
+				function (err) { console.log("playAudio():Audio Error: " + err); }
+			);
+		
+			// Play audio
+			my_media.play();
+			
+			
+			
+			
+			
+			
+			
+			
 			var networkState = navigator.connection.type;
 			if (networkState == Connection.NONE) {
 				does_we_have_intenet = false;
