--- a/www/radio.html
+++ b/www/radio.html
@@ -17,7 +17,7 @@
     <script src="js/fastclick.js"></script>
     <script src="js/hammer.min.js"></script>
     <script src="js/back_btn.js"></script>
-
+	<script src="js/notification.js"></script>
 
 	<script>
 		function init() {		
@@ -46,8 +46,8 @@
 
 		}
 
-		window.alert("public");
-		function onDeviceReady() {window.alert("onDeviceReady");
+
+		function onDeviceReady() {
 			console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start onDeviceReady()');
 
 			
@@ -62,7 +62,6 @@
 				goto_home();
 			}
 			setTimeout(function(){
-				window.alert("hi");
 				file = "sound.mp3";
 				file = "http://37.236.145.99/radio.mp3";
 				file = "http://109.205.117.206/radio.mp3";
@@ -73,20 +72,16 @@
 				*/
 				audio = new Media(file, function(){ // success callback
 					console.log("playing");
-					window.alert("play");
 				}, function(error){ // error callback
-					window.alert("error");
 					console.log("code: "    + error.code    + "\n" + "message: " + error.message + "\n");
 					if(error.code==0)
 						alert("Media server is not responding!");
 					//alert("code: "    + error.code    + "\n" + "message: " + error.message + "\n");
 				});
-				window.alert("end");
 				audio.play({ playAudioWhenScreenIsLocked : true });
-				
 				//audio.seekTo(0);
 			}, 50);
-			
+			register_notification();
 		}
 
 			
