--- a/www/radio.html
+++ b/www/radio.html
@@ -75,7 +75,7 @@
 				}, function(error){ // error callback
 					console.log("code: "    + error.code    + "\n" + "message: " + error.message + "\n");
 					if(error.code==0)
-						alert("Media server is not responding!");
+						alert("لا يمكن تشغيل الإذاعة حالياً!");
 					//alert("code: "    + error.code    + "\n" + "message: " + error.message + "\n");
 				});
 				audio.play({ playAudioWhenScreenIsLocked : true });
