--- a/www/salat.html
+++ b/www/salat.html
@@ -228,7 +228,7 @@
 							</li>
 							<li>
 								<span class="smm_zohr retina"></span>
-								<span>صلاة الفجر</span>
+								<span>صلاة الظهر</span>
 								<span>05:16</span>
 							</li>
 							<li>
